--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,9 +4,6 @@
     flex-direction: column;
     padding: 200px;
 }
-
-#tchuco{
-    padding: 30px;
-    background-color: rgb(0, 0, 0);
-    width: 100px;
+#div{
+    ground-color: black;
 }
